# NBodySim

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
examples/: input.txt  many_planets.txt  negative_mass.txt  solar_system.txt  stable_system.txt
include/: KeyboardHandler.hpp  Planet.hpp  Universe.hpp  Vector2Utils.hpp
src/: KeyboardHandler.cpp  KeyboardHandler.hpp  Planet.cpp  Planet.hpp  Universe.cpp  Universe.hpp  Vector2.hpp  Vector2Utils.hpp  main.cpp  utils.cpp  utils.hpp
tests/: CMakeLists.txt  planet.cpp  test.cpp  universe.cpp
